--- a/.azure/pipelines.yml
+++ b/.azure/pipelines.yml
@@ -15,6 +15,7 @@ parameters:
     type: string
     values:
       - 'windows-2019'
+      - 'windows-2022'
 name: $(DayOfYear)$(Rev:rr)
 trigger:
   branches:
@@ -38,10 +39,10 @@ variables:
 stages:
   - ${{ if endsWith(variables['build.sourceBranch'], 'development') }}:
     - template: stages/development.yml
-      parameters:
-        selfHosted: ${{ parameters.selfHosted }}
-        linuxVmImage: ${{ parameters.linuxVmImage }}
-        windowsVmImage: ${{ parameters.windowsVmImage }}
+      # parameters:
+      #   selfHosted: ${{ parameters.selfHosted }}
+      #   linuxVmImage: ${{ parameters.linuxVmImage }}
+      #   windowsVmImage: ${{ parameters.windowsVmImage }}
   - ${{ if endsWith(variables['build.sourceBranch'], 'release') }}:
     - template: stages/staging.yml
   - ${{ if endsWith(variables['build.sourceBranch'], 'master') }}:
