Pipeline alignment with parameters (tricky one)

--- a/.azure/jobs/build-production.yml
+++ b/.azure/jobs/build-production.yml
@@ -3,10 +3,10 @@
     displayName: 'Master branch (net6.0, build)'
     timeoutInMinutes: 60
     pool:
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
-        name: $(PIPELINES_WINDOWS_VM_IMAGE)
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
-        vmImage: $(PIPELINES_WINDOWS_VM_IMAGE)
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: ${{ parameters.linuxVmImage }}
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: ${{ parameters.linuxVmImage }}
     variables:
       - name: DotnetBuildName
         value: 'net6.0'
@@ -26,10 +26,10 @@
     displayName: 'Store NuGet Packages for Production'
     timeoutInMinutes: 30
     pool:
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
-        name: $(PIPELINES_WINDOWS_VM_IMAGE)
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
-        vmImage: $(PIPELINES_WINDOWS_VM_IMAGE)
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: ${{ parameters.linuxVmImage }}
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: ${{ parameters.linuxVmImage }}
     variables:
       - name: ArtifactPackageName
         value: 'Production'
