--- a/.azure/jobs/build-pullrequest.yml
+++ b/.azure/jobs/build-pullrequest.yml
@@ -5,13 +5,13 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: $(PIPELINES_LINUX_VM_IMAGE)
+          imageName: ${{ parameters.linuxVmImage }}
         Windows_Build_and_Test:
-          imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
+          imageName: ${{ parameters.windowsVmImage }}
     pool:
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+      ${{ if eq(parameters.selfHosted, 'true') }}:
         name: $(imageName)
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+      ${{ if eq(parameters.selfHosted, 'false') }}:
         vmImage: $(imageName)
     variables:
       - name: DotnetBuildName
