--- a/.azure/pipelines.yml
+++ b/.azure/pipelines.yml
@@ -16,7 +16,9 @@ parameters:
     values:
       - 'windows-2019'
       - 'windows-2022'
+
 name: $(DayOfYear)$(Rev:rr)
+
 trigger:
   branches:
     include:
@@ -39,13 +41,25 @@ variables:
 stages:
   - ${{ if endsWith(variables['build.sourceBranch'], 'development') }}:
     - template: stages/development.yml
-      # parameters:
-      #   selfHosted: ${{ parameters.selfHosted }}
-      #   linuxVmImage: ${{ parameters.linuxVmImage }}
-      #   windowsVmImage: ${{ parameters.windowsVmImage }}
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
   - ${{ if endsWith(variables['build.sourceBranch'], 'release') }}:
     - template: stages/staging.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
   - ${{ if endsWith(variables['build.sourceBranch'], 'master') }}:
     - template: stages/production.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
   - ${{ if eq(variables['build.reason'], 'PullRequest') }}:
     - template: stages/pullrequest.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
