--- a/.azure/stages/production.yml
+++ b/.azure/stages/production.yml
@@ -10,6 +10,10 @@
         value: 'Release'
     jobs:
     - template: ../jobs/build-production.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
 
   - stage: UpdateBuildNumber
     displayName: 'Updating BUILD_BUILDNUMBER for master branch'
@@ -17,6 +21,10 @@
     dependsOn: BuildMaster
     jobs:
     - template: ../jobs/finalization.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
 
   - stage: DeployMaster
     displayName: 'Deployment for master branch'
@@ -26,3 +34,7 @@
     - group: BuildSecrets
     jobs:
     - template: ../jobs/deployment-production.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
