--- a/.azure/stages/pullrequest.yml
+++ b/.azure/stages/pullrequest.yml
@@ -10,6 +10,10 @@
         value: 'Release'
     jobs:
     - template: ../jobs/build-pullrequest.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
 
   - stage: UpdateBuildNumber
     displayName: 'Updating BUILD_BUILDNUMBER for Pull Request'
@@ -17,3 +21,7 @@
     dependsOn: BuildPullRequest
     jobs:
     - template: ../jobs/finalization.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
