--- a/.azure/jobs/build-staging.yml
+++ b/.azure/jobs/build-staging.yml
@@ -5,13 +5,13 @@
     strategy:
       matrix:
         Linux_Build_and_Test:
-          imageName: $(PIPELINES_LINUX_VM_IMAGE)
+          imageName: ${{ parameters.linuxVmImage }}
         Windows_Build_Test_and_Package:
-          imageName: $(PIPELINES_WINDOWS_VM_IMAGE)
+          imageName: ${{ parameters.windowsVmImage }}
     pool:
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
+      ${{ if eq(parameters.selfHosted, 'true') }}:
         name: $(imageName)
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
+      ${{ if eq(parameters.selfHosted, 'false') }}:
         vmImage: $(imageName)
     variables:
       - name: DotnetBuildName
@@ -34,10 +34,10 @@
     displayName: 'Store NuGet Packages for RC'
     timeoutInMinutes: 30
     pool:
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
-        name: $(PIPELINES_WINDOWS_VM_IMAGE)
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
-        vmImage: $(PIPELINES_WINDOWS_VM_IMAGE)
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: ${{ parameters.windowsVmImage }}
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: ${{ parameters.windowsVmImage }}
     variables:
       - name: ArtifactPackageName
         value: 'ReleaseCandidate'
