--- a/.azure/jobs/deployment-staging.yml
+++ b/.azure/jobs/deployment-staging.yml
@@ -1,12 +1,12 @@
 ﻿jobs:
-  - deployment: 'CD'
+  - deployment: CD
     displayName: 'RC: release to public NuGet Feed'
     environment: 'Staging'
     pool:
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'true') }}:
-        name: $(PIPELINES_LINUX_VM_IMAGE)
-      ${{ if eq(variables.PIPELINES_SELF_HOSTED, 'false') }}:
-        vmImage: $(PIPELINES_LINUX_VM_IMAGE)
+      ${{ if eq(parameters.selfHosted, 'true') }}:
+        name: ${{ parameters.linuxVmImage }}
+      ${{ if eq(parameters.selfHosted, 'false') }}:
+        vmImage: ${{ parameters.linuxVmImage }}
     strategy:
       runOnce:
         deploy:
