--- a/.azure/stages/staging.yml
+++ b/.azure/stages/staging.yml
@@ -10,6 +10,10 @@
         value: 'Release'
     jobs:
     - template: ../jobs/build-staging.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
 
   - stage: UpdateBuildNumber
     displayName: 'Updating BUILD_BUILDNUMBER for release branch'
@@ -17,6 +21,10 @@
     dependsOn: BuildRelease
     jobs:
     - template: ../jobs/finalization.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
 
   - stage: DeployRelease
     displayName: 'Deployment for release branch'
@@ -26,3 +34,7 @@
     - group: BuildSecrets
     jobs:
     - template: ../jobs/deployment-staging.yml
+      parameters:
+        selfHosted: ${{ parameters.selfHosted }}
+        linuxVmImage: ${{ parameters.linuxVmImage }}
+        windowsVmImage: ${{ parameters.windowsVmImage }}
