Test carried over as-is; will be re-organized and alignted towards SRP unit test with some integration testing as well

--- a/src/Savvyio.Extensions.Storage.InMemory/Savvyio.Extensions.Storage.InMemory.csproj
+++ b/src/Savvyio.Extensions.Storage.InMemory/Savvyio.Extensions.Storage.InMemory.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Savvyio.Domain.EventSourcing\Savvyio.Domain.EventSourcing.csproj" />
+    <ProjectReference Include="..\Savvyio.Domain\Savvyio.Domain.csproj" />
+    <ProjectReference Include="..\Savvyio.Queries\Savvyio.Queries.csproj" />
     <ProjectReference Include="..\Savvyio.Storage\Savvyio.Storage.csproj" />
   </ItemGroup>
 
