--- a/src/Savvyio/Savvyio.csproj
+++ b/src/Savvyio/Savvyio.csproj
@@ -7,4 +7,8 @@
     <PackageReference Include="Cuemon.Extensions.Reflection" Version="6.4.0-preview.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Messaging\" />
+  </ItemGroup>
+
 </Project>
