--- a/src/Savvyio.EventDriven.Messaging/Savvyio.EventDriven.Messaging.csproj
+++ b/src/Savvyio.EventDriven.Messaging/Savvyio.EventDriven.Messaging.csproj
@@ -1,7 +1,2 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
 </Project>
