--- a/src/Savvyio.Extensions.Microsoft.DependencyInjection/Savvyio.Extensions.Microsoft.DependencyInjection.csproj
+++ b/src/Savvyio.Extensions.Microsoft.DependencyInjection/Savvyio.Extensions.Microsoft.DependencyInjection.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>Savvyio.Storage</RootNamespace>
+    <RootNamespace>Savvyio.Extensions</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
