Added unit test for Savvyio.Extensions.Microsoft.DependencyInjection

--- a/src/Savvyio.Extensions.Microsoft.DependencyInjection/Savvyio.Extensions.Microsoft.DependencyInjection.csproj
+++ b/src/Savvyio.Extensions.Microsoft.DependencyInjection/Savvyio.Extensions.Microsoft.DependencyInjection.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.DependencyInjection" Version="6.4.0-preview.11" />
+    <PackageReference Include="Cuemon.Extensions.DependencyInjection" Version="6.4.0" />
   </ItemGroup>
 
 </Project>
