--- a/test/Savvyio.Commands.Tests/Savvyio.Commands.Tests.csproj
+++ b/test/Savvyio.Commands.Tests/Savvyio.Commands.Tests.csproj
@@ -4,4 +4,8 @@
     <RootNamespace>Savvyio.Commands</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Cuemon.Extensions.Xunit.App" Version="6.4.0" />
+  </ItemGroup>
+
 </Project>
