--- a/src/Savvyio/Savvyio.csproj
+++ b/src/Savvyio/Savvyio.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="Cuemon.Extensions.Core" Version="6.4.0-preview.11" />
-    <PackageReference Include="Cuemon.Extensions.Collections.Generic" Version="6.4.0-preview.11" />
-    <PackageReference Include="Cuemon.Extensions.Reflection" Version="6.4.0-preview.11" />
+    <PackageReference Include="Cuemon.Extensions.Core" Version="6.4.0" />
+    <PackageReference Include="Cuemon.Extensions.Collections.Generic" Version="6.4.0" />
+    <PackageReference Include="Cuemon.Extensions.Reflection" Version="6.4.0" />
   </ItemGroup>
 
 </Project>
