--- a/test/Savvyio.Domain.Tests/Savvyio.Domain.Tests.csproj
+++ b/test/Savvyio.Domain.Tests/Savvyio.Domain.Tests.csproj
@@ -8,5 +8,9 @@
     <ProjectReference Include="..\..\src\Savvyio.Domain\Savvyio.Domain.csproj" />
     <ProjectReference Include="..\Savvyio.Assets.Tests\Savvyio.Assets.Tests.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Cuemon.Extensions.Xunit.App" Version="6.4.0" />
+  </ItemGroup>
   
 </Project>
