--- a/test/Savvyio.EventDriven.Tests/Savvyio.EventDriven.Tests.csproj
+++ b/test/Savvyio.EventDriven.Tests/Savvyio.EventDriven.Tests.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\Savvyio.Assets.Tests\Savvyio.Assets.Tests.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Cuemon.Extensions.Xunit.App" Version="6.4.0" />
+  </ItemGroup>
+
 </Project>
