codecov.io changes

--- a/.azure/steps/codecov-setup.yml
+++ b/.azure/steps/codecov-setup.yml
@@ -1,4 +1,4 @@
 ﻿steps:
-  - bash: bash <(curl -s https://codecov.io/bash)
+  - bash: curl -Os https://uploader.codecov.io/latest/linux/codecov\nchmod +x codecov\n./codecov -t ${CODECOV_TOKEN}
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
     displayName: 'Upload to codecov.io'
