--- a/.azure/jobs/build-development.yml
+++ b/.azure/jobs/build-development.yml
@@ -26,7 +26,7 @@
     - template: ../steps/sonarcloud-prepare.yml
     - template: ../steps/build-net6_0.yml
     - template: ../steps/unit-test.yml
-    - template: ../steps/codecov.yml
+    - template: ../steps/codecov-setup.yml
     - template: ../steps/sonarcloud-finalize.yml
     - template: ../steps/publish-artifact.yml
 
