bash with multiple lines

--- a/.azure/steps/codecov-setup.yml
+++ b/.azure/steps/codecov-setup.yml
@@ -1,4 +1,9 @@
 ﻿steps:
-  - bash: curl -Os https://uploader.codecov.io/latest/linux/codecov\nchmod +x codecov\n./codecov
+  - bash: curl -Os https://uploader.codecov.io/latest/linux/codecov
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
-    displayName: 'Upload to codecov.io'
+    displayName: 'Download the codecov.io uploader'
+  - bash: |
+      set -ex
+      chmod +x codecov
+      ./codecov
+    displayName: 'Upload test result to codecov.io'
