Try to make powershell compatible

--- a/.azure/steps/codecov-setup.yml
+++ b/.azure/steps/codecov-setup.yml
@@ -1,5 +1,6 @@
 ﻿steps:
   - bash: |
+      bash
       curl -Os https://uploader.codecov.io/latest/linux/codecov
       set -ex
       chmod +x codecov
