Tweaking codecov.io

--- a/.azure/steps/unit-test.yml
+++ b/.azure/steps/unit-test.yml
@@ -4,7 +4,9 @@
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
     inputs:
       command: test
-      projects: test/**/*.csproj
+      projects: |
+        test/**/*.csproj
+        !**/Savvyio.Assets.Tests.csproj
       arguments: '--configuration $(BuildConfiguration) --verbosity quiet --collect:"XPlat Code Coverage" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover'
       publishTestResults: true
 
@@ -13,7 +15,9 @@
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
     inputs:
       command: test
-      projects: test/**/*.csproj
+      projects: |
+        test/**/*.csproj
+        !**/Savvyio.Assets.Tests.csproj
       arguments: '--configuration $(BuildConfiguration) --verbosity quiet --collect:"XPlat Code Coverage" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover'
       publishTestResults: true
 
