--- a/.azure/steps/unit-test.yml
+++ b/.azure/steps/unit-test.yml
@@ -7,6 +7,7 @@
       projects: |
         test/**/*.csproj
         !**/Savvyio.Assets.Tests.csproj
+        !**/Savvyio.Assets.EfCore.Tests.csproj
       arguments: '--configuration $(BuildConfiguration) --verbosity quiet --collect:"XPlat Code Coverage" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover'
       publishTestResults: true
 
@@ -18,6 +19,7 @@
       projects: |
         test/**/*.csproj
         !**/Savvyio.Assets.Tests.csproj
+        !**/Savvyio.Assets.EfCore.Tests.csproj
       arguments: '--configuration $(BuildConfiguration) --verbosity quiet --collect:"XPlat Code Coverage" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover'
       publishTestResults: true
 
