--- a/src/Savvyio.Extensions.Storage.Microsoft.DependencyInjection/Savvyio.Extensions.Storage.Microsoft.DependencyInjection.csproj
+++ b/src/Savvyio.Extensions.Storage.Microsoft.DependencyInjection/Savvyio.Extensions.Storage.Microsoft.DependencyInjection.csproj
@@ -5,12 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Savvyio.Domain\Savvyio.Domain.csproj" />
-    <ProjectReference Include="..\Savvyio.Extensions.Storage.Microsoft.DependencyInjection\Savvyio.Extensions.Storage.Microsoft.DependencyInjection.csproj" />
+    <ProjectReference Include="..\Savvyio.Extensions.Microsoft.DependencyInjection\Savvyio.Extensions.Microsoft.DependencyInjection.csproj" />
     <ProjectReference Include="..\Savvyio\Savvyio.csproj" />
   </ItemGroup>
 
