--- a/test/Savvyio.Extensions.Storage.Microsoft.EntityFrameworkCore.Tests/Savvyio.Extensions.Storage.Microsoft.EntityFrameworkCore.Tests.csproj
+++ b/test/Savvyio.Extensions.Storage.Microsoft.EntityFrameworkCore.Tests/Savvyio.Extensions.Storage.Microsoft.EntityFrameworkCore.Tests.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Savvyio.Extensions.Storage.Microsoft.EntityFrameworkCore\Savvyio.Extensions.Storage.Microsoft.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\Savvyio.Assets.EfCore.Tests\Savvyio.Assets.EfCore.Tests.csproj" />
     <ProjectReference Include="..\Savvyio.Assets.Tests\Savvyio.Assets.Tests.csproj" />
   </ItemGroup>
 
