--- a/test/Savvyio.Core.Tests/Savvyio.Core.Tests.csproj
+++ b/test/Savvyio.Core.Tests/Savvyio.Core.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Savvyio.Core\Savvyio.Core.csproj" />
+    <ProjectReference Include="..\Savvyio.Assets.Tests\Savvyio.Assets.Tests.csproj" />
   </ItemGroup>
 
   <ItemGroup>
