--- a/test/Savvyio.Assets.Tests/Savvyio.Assets.Tests.csproj
+++ b/test/Savvyio.Assets.Tests/Savvyio.Assets.Tests.csproj
@@ -15,8 +15,11 @@
     <ProjectReference Include="..\..\src\Savvyio.Domain\Savvyio.Domain.csproj" />
     <ProjectReference Include="..\..\src\Savvyio.EventDriven\Savvyio.EventDriven.csproj" />
     <ProjectReference Include="..\..\src\Savvyio.Extensions.Core\Savvyio.Extensions.Core.csproj" />
-    <ProjectReference Include="..\..\src\Savvyio.Extensions.Microsoft.DependencyInjection.EntityFrameworkCore\Savvyio.Extensions.Microsoft.DependencyInjection.EntityFrameworkCore.csproj" />
-    <ProjectReference Include="..\..\src\Savvyio.Extensions.Microsoft.DependencyInjection\Savvyio.Extensions.Microsoft.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.DependencyInjection.EntityFrameworkCore.Domain\Savvyio.Extensions.DependencyInjection.EntityFrameworkCore.Domain.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.DependencyInjection.EntityFrameworkCore\Savvyio.Extensions.DependencyInjection.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.DependencyInjection\Savvyio.Extensions.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.EntityFrameworkCore.Domain.EventSourcing\Savvyio.Extensions.EntityFrameworkCore.Domain.EventSourcing.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.EntityFrameworkCore.Domain\Savvyio.Extensions.EntityFrameworkCore.Domain.csproj" />
     <ProjectReference Include="..\..\src\Savvyio.Queries\Savvyio.Queries.csproj" />
   </ItemGroup>
 
