For the love of anything precious to you; shame on Microsoft for not supporting long path values!!!!!!! ¯\_(ツ)_/¯

--- a/src/Savvyio.Extensions.DependencyInjection.EFCore/Savvyio.Extensions.DependencyInjection.EFCore.csproj
+++ b/src/Savvyio.Extensions.DependencyInjection.EFCore/Savvyio.Extensions.DependencyInjection.EFCore.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\Savvyio.Extensions.DependencyInjection\Savvyio.Extensions.DependencyInjection.csproj" />
-    <ProjectReference Include="..\Savvyio.Extensions.EntityFrameworkCore\Savvyio.Extensions.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\Savvyio.Extensions.EFCore\Savvyio.Extensions.EFCore.csproj" />
   </ItemGroup>
 </Project>
