--- a/src/Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing/Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing.csproj
+++ b/src/Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing/Savvyio.Extensions.DependencyInjection.EFCore.Domain.EventSourcing.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  
   <ItemGroup>
+    <ProjectReference Include="..\Savvyio.Extensions.DependencyInjection.Domain\Savvyio.Extensions.DependencyInjection.Domain.csproj" />
     <ProjectReference Include="..\Savvyio.Extensions.DependencyInjection.EFCore.Domain\Savvyio.Extensions.DependencyInjection.EFCore.Domain.csproj" />
+    <ProjectReference Include="..\Savvyio.Extensions.EFCore.Domain.EventSourcing\Savvyio.Extensions.EFCore.Domain.EventSourcing.csproj" />
   </ItemGroup>
+
 </Project>
