--- a/test/Savvyio.Commands.Tests/Savvyio.Commands.Tests.csproj
+++ b/test/Savvyio.Commands.Tests/Savvyio.Commands.Tests.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Savvyio.Commands\Savvyio.Commands.csproj" />
+    <ProjectReference Include="..\..\src\Savvyio.Extensions.DependencyInjection.Commands\Savvyio.Extensions.DependencyInjection.Commands.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="Cuemon.Extensions.Xunit.App" Version="6.4.0" />
   </ItemGroup>
 
