--- a/.docfx/Dockerfile.docfx
+++ b/.docfx/Dockerfile.docfx
@@ -1,6 +1,6 @@
 ﻿# escape=`
 
-FROM nginx:1.21.5 AS base
+FROM nginx:1.21.6 AS base
 RUN rm -rf /usr/share/nginx/html/*
 
 FROM mono:6.12.0.122 AS build
@@ -13,7 +13,7 @@ ENV DOCFX_SOURCE_BRANCH_NAME="development"
 RUN curl -sSL --output packages-microsoft-prod.deb https://packages.microsoft.com/config/debian/10/packages-microsoft-prod.deb
 RUN dpkg -i packages-microsoft-prod.deb
 RUN apt-get update `
-&& apt-get install -y powershell zip apt-transport-https dirmngr gnupg ca-certificates git `
+&& apt-get install -y powershell zip apt-transport-https dirmngr gnupg ca-certificates ca-certificates-mono git `
 && mkdir -p /opt/docfx/ `
 && curl -sSL --output docfx.zip "https://github.com/dotnet/docfx/releases/download/${DOCFX_VERSION}/docfx.zip" `
 && unzip docfx.zip -d /opt/docfx/ `
