--- a/test/Savvyio.Extensions.DependencyInjection.Tests/Savvyio.Extensions.DependencyInjection.Tests.csproj
+++ b/test/Savvyio.Extensions.DependencyInjection.Tests/Savvyio.Extensions.DependencyInjection.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>Savvyio.Extensions</RootNamespace>
+    <RootNamespace>Savvyio.Extensions.DependencyInjection</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
