--- a/src/Savvyio.Extensions.Dapper/Savvyio.Extensions.Dapper.csproj
+++ b/src/Savvyio.Extensions.Dapper/Savvyio.Extensions.Dapper.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Dapper.StrongName" Version="2.0.123" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
   </ItemGroup>
 
